src/style.css
/* ... */
@media (orientation: portrait) and (max-width: 480px) {
	#content {
		margin: 12px;
		padding: 12px;
	}
	#content h1 {
		font-size: 48px;
	}
	#content h3 {
		font-size: 22px;
	}	
	#content p {
		font-size: 20px;
	}	
	#content #pledge {
		margin: 36px auto;
		padding: 20px;
	}
	#content #pledge h2 {
		font-size: 22px;
	}
	.text-content {
		width: 98%;
	}
	#logo-container {
		width: 100%;
		text-align: center;
	}
	#logo-container #lnt-logo {
		width: 100%;
		position: relative;
		top: 4px;
	}		
	#footer {
		padding: 0;
		flex-direction: column;
		height: 100px;
		padding-bottom: 25px;		
	}
	#footer h1 {
		font-size: 24px;
	}
	.modal-content {
		width: 80vw;
	}
	.modal-body {
		width: 90%;
	}
	.modal-body h1 {
		font-size: 36px;
	}
	.modal-body p {
		font-size: 20px;
	}
	#fb-share-container #fb-share-button {
		font-size: 20px;
	}
}
@media (orientation: landscape) and (max-width: 850px) {
	#content {
		height: auto !important;
	}
	#logo-container {
		width: 100% !important;
		text-align: center !important;
	}
	#logo-container #lnt-logo {
		width: 90% !important;
		position: relative !important;
		top: 4px !important;
	}		
	.modal-content {
		width: 80vw !important;
		height: 90vh !important;
		padding: 8px !important;
	}
	.modal-body h1 {
		font-size: 24px !important;
	}
	.modal-body p {
		font-size: 18px !important;
	}	
	#fb-share-container {
		padding: 8px !important
	}
	#fb-share-container #fb-share-button {
		font-size: 18px !important;
	}	
}
@media (min-width: 481px) and (max-width: 1024px) {
	#content {
		margin: 12px;
		padding: 12px;
		height: calc(100vh - 50px);
	}
	#content h1 {
		font-size: 50px;
	}
	#content h3 {
		font-size: 28px;
	}	
	#content p {
		font-size: 24px;
	}	
	#content #pledge {
		width: 90%;
		margin: 36px auto;
		padding: 16px;
	}
	#content #pledge h2 {
		font-size: 28px;
	}
	.text-content {
		width: 90%
	}
	#logo-container {
		width: 100%;
		text-align: center;
	}
	#logo-container #lnt-logo {
		width: 70%;
		position: relative;
		top: 4px;
	}		
	#footer {
		padding: 0 25px;
		height: 50px;
		flex-direction: row;
	}
	.modal-content {
		width: 70vw;
	}
	.modal-body h1 {
		font-size: 48px;
	}
	.modal-body p {
		font-size: 24px;
	}
	#fb-share-container #fb-share-button {
		font-size: 24px;
	}	
}
@media (orientation: landscape) and (min-device-width : 850px) and (max-width: 1024px) {
	#logo-container {
		width: fit-content !important;
		text-align: left !important;
	}
	#logo-container #lnt-logo {
		width: 44% !important;
		position: relative !important;
		top: 4px !important;
		left: -14px !important;
	}
	.modal-content {
		width: 50vw !important;
	}
}
@media (min-width: 1025px) {
	#content {
		margin: 24px;
		padding: 24px;
	}
	#content h1 {
		font-size: 64px;
	}
	#content h3 {
		font-size: 36px;
	}	
	#content p {
		font-size: 28px;
		width: 80%;
		margin: 0 auto;
	}	
	#content #pledge {
		width: 80%;
		margin: 64px auto;
		padding: 30px;
	}
	#content #pledge h2 {
		font-size: 36px;
		width: 80%;
		margin: 0 auto;
	}	
	.text-content {
		width: 70%
	}
	#logo-container #lnt-logo {
		width: 40%;
		position: relative;
		top: 4px;
		left: -15px;
	}	
	#footer {
		padding: 0px 25px;
		height: 50px;
		flex-direction: row;
	}	
	.modal-content {
		width: 40vw;
	}
	.modal-body h1 {
		font-size: 48px;
	}
	.modal-body p {
		font-size: 24px;
	}
	#fb-share-container #fb-share-button {
		font-size: 24px;
	}		
}

html, body {
    margin: 0;
    overflow-x: hidden;
    background-color: #284245;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-family: Urbanist-Regular;
}
body {
    overflow: hidden;
}
.spinner-container {
    background-color: #000000;
    width: 100vw;
    min-height: 100vh;
    -webkit-animation-duration: 12s;animation-duration: 12s;
    -webkit-animation-fill-mode: both;animation-fill-mode: both;
}
canvas {
    position: absolute;
    top: 0;
    -webkit-animation-duration: 12s;animation-duration: 12s;
    -webkit-animation-fill-mode: both;animation-fill-mode: both;
}
#container {
    background-color: #284245;
    min-height: 100vh;
	position: relative;
    top: 0;
}
.text-content {
    margin: 0 auto;
}
#content {
    text-align: center;
    color: #eae2b7;
	height: fit-content;
	width: 90vw;
	max-width: 1600px;
	margin: 0 auto;
	display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
#content h1 {
    color: #fcbf49;
	font-family: Urbanist-ExtraBold;
}
#content #pledge {
    border-radius: 20px;
    background-color: #fcbf49;
    color: #284245;
}
#content #pledge .action-header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
#content #pledge h2 {
	font-family: Urbanist-Regular;
	text-decoration: underline;
}
#content #pledge h3 {
	font-family: Urbanist-Black;
}
#pledge-button {
    margin-top: 12px;
    font-size: 20px;
    padding: 12px 16px;
    border-radius: 12px;
	background-color: #fcbf49;
    border: 2px solid #f7e0b3;
	font-family: Urbanist-Bold;
	color: #284245;
	cursor: pointer
}
#pledge-button:hover {
	background-color: #f7e0b3;
    border: 2px solid #fcbf49;
}
#pledge-button:disabled {
	background-color: #b7b7b7;
    border: 2px solid #8a8989;
    color: #8a8989;
    font-family: Urbanist-Bold;
	cursor:not-allowed;
}
.cta {
	padding-top: 20px;
}
.row {
	flex-direction: row;
	width: 300px;
	margin: 0 auto;
}
.cb-text {
    float: right;
    line-height: 35px;
    height: 35px;
	font-size: 20px;
}
.pledge-counter {
	margin-top: 25px;
	margin-bottom: 50px;
}
#counter {
	margin: 0;
    margin-right: 8px;
    display: inline;
	font-family: Urbanist-ExtraBold;
	font-size: 20px;
}
.counter-text {
	display: inline;
}

/* ----- FOOTER ----- */

#footer {
	background-color: #fcbf49;
    position: sticky;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
#footer h1 {
	font-family: Urbanist-Black;
	color: #e01b2e;
	cursor: default;
}
/* ... */

